--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reown/appkit": "^1.7.7",
     "@reown/appkit-adapter-solana": "^1.7.7",
     "@reown/appkit-adapter-wagmi": "^1.7.7",
+    "@solana/web3.js": "^1.98.2",
     "@tanstack/react-query": "^5.79.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
