--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
@@ -18,6 +19,7 @@
     "@reown/appkit": "^1.7.7",
     "@reown/appkit-adapter-solana": "^1.7.7",
     "@reown/appkit-adapter-wagmi": "^1.7.7",
+    "@reown/appkit-wallet-button": "^1.7.8",
     "@solana/web3.js": "^1.98.2",
     "@tanstack/react-query": "^5.79.0",
     "class-variance-authority": "^0.7.1",
