--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@reown/appkit-adapter-solana": "^1.7.7",
     "@reown/appkit-adapter-wagmi": "^1.7.7",
     "@reown/appkit-wallet-button": "^1.7.8",
+    "@solana/kit": "^2.1.1",
     "@solana/web3.js": "^1.98.2",
+    "@solana/webcrypto-ed25519-polyfill": "^2.1.1",
     "@tanstack/react-query": "^5.79.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
