--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.31.1",
+    "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
@@ -20,19 +22,27 @@
     "@reown/appkit-adapter-solana": "^1.7.7",
     "@reown/appkit-adapter-wagmi": "^1.7.7",
     "@reown/appkit-wallet-button": "^1.7.8",
+    "@solana-program/system": "^0.7.0",
     "@solana/kit": "^2.1.1",
+    "@solana/react": "^2.1.1",
+    "@solana/wallet-adapter-react": "^0.15.39",
     "@solana/web3.js": "^1.98.2",
     "@solana/webcrypto-ed25519-polyfill": "^2.1.1",
     "@tanstack/react-query": "^5.79.0",
+    "bignumber.js": "^9.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.3",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.58.1",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "viem": "^2.30.5",
-    "wagmi": "^2.15.4"
+    "wagmi": "^2.15.4",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
